Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- buddypress-group-email-subscription: Upgraded plugin from version 3.6.1 to 3.7.0


Changes 17.05.23
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.9 (Trello #1592)
- mu-common: Hidden options to allow admins to activate pingbacks and trackbacks (Trello #1551)
- mu-common: Customized order posts into homepage and categories (Trello #1579)
- email-subscribers: Upgraded plugin from version 2.9.2 to 3.2.6 (Trello #1444)
- xtec-booking: Added button to calendar view to select and deselect a batch of resources (Trello #1537)
- bp-like: Fixed removal of activity when you like and then unlike your own activity post
- xtec-booking: Increased maximum number of events displayed in calendar view (Trello #1583)
- table-of-contents-plus: Added plugin (Trello #1370)
- agora-functions: Added feature to replace bp-moderation (Trello #1580)


Changes 17.04.24
---------------------------------------------------------------------------------------
- Polylang: Added plugin (Trello #1198)
- bp-moderation: Removed links in BuddyPress index page


Changes 17.03.28
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.7 (Trello #1543)
- xtec lib: Remove the visits of the robots older than two months (Trello #1296)
- import-users-from-csv-with-meta: Upgraded plugin from version 1.8.7.2 to 1.10.2 (Trello #1260)
- Added WordPress translation to Basque, Galician, French and Occitan (Trello #1534)
- xtec-booking: Added support for translations to javascript calendar (Trello #1534)